prevent comment form from overflowing container

--- a/themes/commentpress-modern/assets/css/screen.css
+++ b/themes/commentpress-modern/assets/css/screen.css
@@ -1288,6 +1288,7 @@ ol.children .reply a
 #respond
 {
 	padding: 2%;
+	position: relative;
 }
 
 div#respond > p
